fixed the overflow issue

--- a/scss/_frontpage.scss
+++ b/scss/_frontpage.scss
@@ -6,8 +6,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
     overflow: hidden;
 
+    overflow-x: hidden !important;
 
 
   
